hard-gists/5284646/run.log
=== Docker Run Log for 5284646 ===
Started at: Mi 29. Okt 15:32:01 CET 2025

[2025-10-29 15:32:02] START: Running container for 5284646
[2025-10-29 15:32:02] SUCCESS: Container a3b35cadbe0b85f3513b876c61bfe31ba46318004fdc67219914c5138b89416d started for 5284646
=== Container logs for 5284646 ===
  File "/snippet.py", line 81
    print ''.join([str(i) for i in pr]), self.status
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5284646 ===
[2025-10-29 15:32:04] INFO: Container a3b35cadbe0b85f3513b876c61bfe31ba46318004fdc67219914c5138b89416d has stopped
